--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width-device-width, inicial-scale=1.0">
-    <title>Site com login e registro</title>
+    <title>Survey Site</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
